<resources>
    <string name="app_name">Presensi Geofence</string>
    <string name="join_class">Ikuti Kelas Ini</string>
    <string name="durasi_label">Durasi</string>
    <string name="jam_label">Jam</string>
    <string name="tanggal_picker_btn">Tanggal</string>
    <string name="tanggal_picker_label">Tentukan Tanggal</string>
    <string name="waktu_picker_label">Tentukan Jam</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>


    <string name="nav_home">Home</string>
    <string name="nav_photos">Photos</string>
    <string name="nav_movies">Movies</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>

    <string-array name="nav_item_activity_titles_dosen">
        <item>List Ngajarku</item>
        <item>List Mahasiswa</item>
        <item>List Dosen</item>
        <item>Timeline</item>
        <item>Creator</item>
    </string-array>

    <string-array name="nav_item_activity_titles_mahasiswa">
        <item>List Ngajar</item>
        <item>List Mahasiswa</item>
        <item>List Dosen</item>
        <item>Creator</item>
    </string-array>

    <string-array name="hari_array">
        <item>Senin</item>
        <item>Selasa</item>
        <item>Rabu</item>
        <item>Kamis</item>
        <item>April</item>
        <item>Jumat</item>
        <item>Sabtu</item>
    </string-array>

    <string-array name="durasi_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
